change bottom and add auto closing

--- a/example/main3.html
+++ b/example/main3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="https://unpkg.com/wavesurfer.js@4.0.1/dist/wavesurfer.js"></script>
-        <script src="../dist/js/audio-player.js"></script>
+        <script src="../dist/js/audio-player3.js"></script>
         <link href="../dist/css/audio-player.css" rel="stylesheet">
         <link rel="shortcut icon" href="#">
     </head>
